[package]
name = "bounded_join_set"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
authors = ["Tristan Streichenberger <TristanStreich@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/bounded_join_set"
repository = "https://github.com/tStreichenberger/bounded_join_set"
description = """
A Concurrency-Limited JoinSet for Tokio.
"""
categories = ["asynchronous"]
keywords = ["tokio", "async", "non-blocking", "futures", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.32", features = ["macros", "time", "rt-multi-thread"] }
